syntax = "proto3";

package api.like.v1;

option go_package = "github.com/go-microservice/moment-service/api/like/v1;v1";
option java_multiple_files = true;
option java_package = "api.like.v1";

service LikeService {
	rpc CreateLike (CreateLikeRequest) returns (CreateLikeReply);
	rpc UpdateLike (UpdateLikeRequest) returns (UpdateLikeReply);
	rpc DeleteLike (DeleteLikeRequest) returns (DeleteLikeReply);
	rpc GetLike (GetLikeRequest) returns (GetLikeReply);
	rpc ListLike (ListLikeRequest) returns (ListLikeReply);
}

message Like {
	int64 user_id = 1;
	int32 obj_type = 2;
	int64 obj_id = 3;
	int32 status = 4;
	int64 created_at = 5;
	int64 updated_at = 6;
}

message CreateLikeRequest {
	int64 user_id = 1;
	int32 obj_type = 2;
	int64 obj_id = 3;
}
message CreateLikeReply {}

message UpdateLikeRequest {

}
message UpdateLikeReply {}

message DeleteLikeRequest {
	int64 user_id = 1;
	int32 obj_type = 2;
	int64 obj_id = 3;
}
message DeleteLikeReply {}

message GetLikeRequest {
	int64 user_id = 1;
	int32 obj_type = 2;
	int64 obj_id = 3;
}
message GetLikeReply {}

message ListLikeRequest {
	int64 user_id = 1;
	int32 obj_type = 2;
	int64 obj_id = 3;
}
message ListLikeReply {
	repeated Like items = 1;
	int64 count = 2;
	bool has_more = 3;
	int64 last_id = 4;
}